# mcp-orchestrator

./: .env.example  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
workflows/: project_research.yaml
